--- a/src/scss/components/_product-hero.scss
+++ b/src/scss/components/_product-hero.scss
@@ -1,7 +1,7 @@
 .k-producthero {
   .k-inner--xl {
     background: $bg-gray;
-    border-radius: .5em;
+    border-radius: 0.5em;
   }
 
   &--gallery {
@@ -19,7 +19,8 @@
   }
 
   &--reviews {
-    p, div {
+    p,
+    div {
       display: inline-block;
     }
   }
@@ -57,58 +58,61 @@
   }
 
   &--heading {
-    margin-bottom: .5em;
+    margin-bottom: 0.5em;
   }
 
   &--variants {
     flex-basis: 100%;
 
-    input[type="radio"] {
+    input[type='radio'] {
       position: absolute;
       visibility: hidden;
-  
+
       & + label {
         position: relative;
         display: block;
         border: 1px solid #ccc;
-        border-radius: .25em;
+        border-radius: 0.25em;
         color: #ccc;
         text-align: center;
-        padding: .667em 1.15em;
-        transition: color .4s $ease-out-circ;
+        padding: 0.667em 1.15em;
+        transition: color 0.4s $ease-out-circ;
         overflow: hidden;
-  
+
         &:hover {
           cursor: pointer;
         }
-  
+
         span {
           position: relative;
           z-index: 2;
           pointer-events: none;
         }
-        
+
         &:after {
-          display: block; content: '';
+          display: block;
+          content: '';
           position: absolute;
-          top: 0; left: 0;
-          width: 100%; height: 100%;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
           background: $bg-dark;
-          transition: transform .4s $ease-out-circ;
+          transition: transform 0.4s $ease-out-circ;
           transform: scale(1, 0);
           transform-origin: bottom center;
           pointer-events: none;
           user-select: none;
         }
       }
-  
+
       &.selected,
       &:checked {
         & + label {
           color: $true-white;
-  
+
           &:after {
-            transition: transform .2s $ease-out-circ;
+            transition: transform 0.2s $ease-out-circ;
             transform: scale(1, 1);
             transform-origin: top center;
           }
@@ -120,10 +124,42 @@
   &--variantselect {
     position: relative;
     display: block;
-    margin-bottom: .5em;
+    margin-bottom: 0.5em;
+
+    &.has-badge {
+      margin-top: 1.5em;
+
+      .k-productform--varianttoggle {
+        padding-top: 1em;
+      }
+    }
 
     &:hover {
       cursor: pointer;
+    }
+
+    .k-badge {
+      position: absolute;
+      top: -1em;
+      right: -0.5em;
+      z-index: 2;
+      color: $true-white;
+
+      &--liner {
+        position: relative;
+        width: 2em;
+        height: 2em;
+        background: $primary;
+        border-radius: 50%;
+        padding: 0.25em 1em;
+      }
+
+      span {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
     }
   }
 
@@ -135,9 +171,9 @@
 
   &--quantity {
     position: relative;
-    margin-top: .5em;
+    margin-top: 0.5em;
 
-    input[type="number"] {
+    input[type='number'] {
       appearance: none;
       width: 100%;
       text-align: center;
@@ -145,7 +181,7 @@
       font-weight: 500;
       padding: 1.25em 3em;
       border: 1px solid $bg-dark;
-      border-radius: .25em;
+      border-radius: 0.25em;
       box-shadow: none;
       background: $true-white;
       outline: none;
@@ -154,7 +190,8 @@
     .k-reduce,
     .k-increase {
       position: absolute;
-      top: 50%; left: .5em;
+      top: 50%;
+      left: 0.5em;
       transform: translateY(-50%);
       appearance: none;
       background: none;
@@ -167,7 +204,7 @@
     }
 
     .k-increase {
-      right: .5em;
+      right: 0.5em;
       left: auto;
     }
   }
@@ -183,7 +220,8 @@
 
     sup {
       position: absolute;
-      top: 0; right: 0;
+      top: 0;
+      right: 0;
       text-decoration: line-through;
       font-size: 50%;
       color: $primary;
@@ -227,10 +265,10 @@
     &--drawer {
       height: 0;
       overflow: hidden;
-      transition: height .2s $ease-out-circ;
+      transition: height 0.2s $ease-out-circ;
 
       .k-productform--bundleselect__variant {
-        margin-bottom: .5em;
+        margin-bottom: 0.5em;
 
         &:last-child {
           margin-bottom: 0;
@@ -239,7 +277,7 @@
     }
   }
 
-  input[type="radio"] {
+  input[type='radio'] {
     position: absolute;
     visibility: hidden;
 
@@ -247,11 +285,11 @@
       position: relative;
       display: block;
       border: 1px solid #ccc;
-      border-radius: .25em;
+      border-radius: 0.25em;
       color: #ccc;
       text-align: center;
-      padding: .667em 1.15em;
-      transition: color .4s $ease-out-circ;
+      padding: 0.667em 1.15em;
+      transition: color 0.4s $ease-out-circ;
       overflow: hidden;
 
       &:hover {
@@ -263,14 +301,17 @@
         z-index: 2;
         pointer-events: none;
       }
-      
+
       &:after {
-        display: block; content: '';
+        display: block;
+        content: '';
         position: absolute;
-        top: 0; left: 0;
-        width: 100%; height: 100%;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
         background: $bg-dark;
-        transition: transform .4s $ease-out-circ;
+        transition: transform 0.4s $ease-out-circ;
         transform: scale(1, 0);
         transform-origin: bottom center;
         pointer-events: none;
@@ -284,7 +325,7 @@
         color: $true-white;
 
         &:after {
-          transition: transform .2s $ease-out-circ;
+          transition: transform 0.2s $ease-out-circ;
           transform: scale(1, 1);
           transform-origin: top center;
         }
@@ -293,7 +334,7 @@
   }
 }
 
-@media(min-width: $bp-sm) {
+@media (min-width: $bp-sm) {
   .k-producthero {
     &--details {
       &__content {
@@ -310,7 +351,7 @@
     &--quantity,
     &--price,
     &--submit {
-      margin-top: .5em;
+      margin-top: 0.5em;
     }
 
     &--quantity,
@@ -322,7 +363,7 @@
       flex-basis: 40%;
     }
   }
-  
+
   .k-productform--bundleselect {
     &__item {
       &--flex {
@@ -340,7 +381,7 @@
   }
 }
 
-@media(min-width: $bp-md) {
+@media (min-width: $bp-md) {
   .k-productform {
     &--variants {
       display: flex;
@@ -368,14 +409,14 @@
     }
 
     &--quantity {
-      input[type="number"] {
+      input[type='number'] {
         padding: 1.25em 0;
       }
     }
   }
 }
 
-@media(min-width: $bp-lg) {
+@media (min-width: $bp-lg) {
   .k-producthero {
     .k-inner {
       @include clearfix();
@@ -418,7 +459,7 @@
   }
 }
 
-@media(min-width: $bp-xxl) {
+@media (min-width: $bp-xxl) {
   .k-producthero {
     .k-inner {
       padding: 8em 5%;
@@ -437,7 +478,7 @@
       width: 75%;
     }
   }
-  
+
   .k-productform {
     &--variantselect {
       flex-basis: 22.5%;
