--- a/src/scss/components/_site-header.scss
+++ b/src/scss/components/_site-header.scss
@@ -1,6 +1,7 @@
 .k-header {
   position: fixed;
-  top: 0; width: 100%;
+  top: 0;
+  width: 100%;
   z-index: 99;
   background: $true-white;
 
@@ -43,7 +44,7 @@
     text-align: right;
 
     .k-inner {
-      padding: .25em 0;
+      padding: 0.25em 0;
     }
 
     span {
@@ -55,7 +56,7 @@
     background: $true-white;
 
     .k-inner {
-      padding: .5em 0;
+      padding: 0.5em 0;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -80,18 +81,19 @@
     transform: translateY(-150%);
     z-index: -1;
     background: $true-white;
-    
+
     &__content {
       padding: 2em 5% 2em 0;
     }
 
     ul {
-      padding: 0; margin: 0;
+      padding: 0;
+      margin: 0;
       list-style-type: none;
     }
 
     li {
-      margin-bottom: 1em;
+      margin-bottom: 0.5em;
     }
 
     a {
@@ -101,19 +103,21 @@
   }
 
   &--navtoggle {
-    width: 2em; height: 1.5em;
+    width: 2em;
+    height: 1.5em;
     position: relative;
 
     &__line {
       position: absolute;
-      height: 2px; width: 100%;
+      height: 2px;
+      width: 100%;
       background: $black;
       transform: translateY(-50%);
-      transition: transform .4s $ease-out-circ;
+      transition: transform 0.4s $ease-out-circ;
 
       &:nth-child(2) {
         top: 50%;
-        transition: opacity .4s $ease-out-circ;
+        transition: opacity 0.4s $ease-out-circ;
       }
 
       &:nth-child(3) {
@@ -123,13 +127,13 @@
   }
 }
 
-@media(min-width: $bp-md) {
+@media (min-width: $bp-md) {
   .k-header {
     &--top {
       .k-inner {
         display: flex;
         justify-content: space-between;
-        padding: .75em 0;
+        padding: 0.75em 0;
       }
     }
 
@@ -144,7 +148,8 @@
     &--nav {
       z-index: 2;
       width: 88.889%;
-      top: 50%; left: 5.55%;
+      top: 50%;
+      left: 5.55%;
       transform: translateY(-50%);
       text-align: left;
       background: transparent;
@@ -162,15 +167,15 @@
           margin-left: 0;
         }
       }
-    
+
       li {
         display: inline-block;
         margin-bottom: 0;
-        margin-right: .75em;
+        margin-right: 0.75em;
       }
 
       a {
-        font-size: 100%;
+        font-size: 90%;
       }
     }
 
@@ -180,7 +185,7 @@
   }
 }
 
-@media(min-width: $bp-lg) {
+@media (min-width: $bp-lg) {
   .k-header {
     &--main {
       .k-inner {
@@ -203,7 +208,7 @@
           margin-right: 0;
         }
       }
-    
+
       li {
         display: inline-block;
         margin-right: 1em;
@@ -216,7 +221,7 @@
   }
 }
 
-@media(min-width: $bp-xl) {
+@media (min-width: $bp-xl) {
   .k-header {
     &--nav {
       width: 94.44%;
