--- a/src/scss/components/_site-header.scss
+++ b/src/scss/components/_site-header.scss
@@ -65,7 +65,7 @@
   }
 
   &--logo {
-    max-width: 3.5em;
+    width: 3.5em;
 
     img {
       display: block;
@@ -142,7 +142,7 @@
     }
 
     &--logo {
-      max-width: 6.25em;
+      width: 6.25em;
     }
 
     &--nav {
