--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 @import 'components/hero';
 @import 'components/hero-productlisting';
 @import 'components/hero-blogsingle';
+@import 'components/hero-contact';
 @import 'components/button';
 @import 'components/card-product';
 @import 'components/card-article';
@@ -37,3 +38,5 @@
 @import 'pages/checkout';
 @import 'pages/search';
 @import 'pages/my-account';
+@import 'pages/contact';
+@import 'pages/about-us';
