--- a/src/scss/global/_typography.scss
+++ b/src/scss/global/_typography.scss
@@ -343,9 +343,9 @@ a,
       font-size: 2.8em;
     }
 
-    &--md {
-      font-size: 4.33em;
-    }
+    // &--md {
+    //   font-size: 4.33em;
+    // }
 
     &--lg {
       font-size: 6em;
@@ -368,9 +368,9 @@ a,
       font-size: 3.2em;
     }
 
-    &--md {
-      font-size: 4.8em;
-    }
+    // &--md {
+    //   font-size: 4.8em;
+    // }
 
     &--lg {
       font-size: 6.55em;
