--- a/src/scss/pages/_blog-single.scss
+++ b/src/scss/pages/_blog-single.scss
@@ -17,6 +17,42 @@
       z-index: -1;
     }
   }
+
+  .k-form {
+    input,
+    button,
+    label,
+    .k-form--message {
+      transition: opacity 0.4s $ease-out-circ;
+    }
+
+    input,
+    button,
+    label {
+      opacity: 1;
+    }
+
+    .k-form--message {
+      opacity: 0;
+      position: absolute;
+      top: 0;
+    }
+
+    &--submitting,
+    &--submitted {
+      input,
+      button,
+      label {
+        opacity: 0;
+      }
+    }
+
+    &--submitted {
+      .k-form--message {
+        opacity: 1;
+      }
+    }
+  }
 }
 
 @media (min-width: $bp-md) {
