--- a/src/scss/global/_typography.scss
+++ b/src/scss/global/_typography.scss
@@ -162,6 +162,11 @@ h2 {
     line-height: 1.4;
     font-weight: 400;
   }
+
+  &--body {
+    font-family: $body-font;
+    // font-weight: 500;
+  }
 }
 
 .k-weight {
