--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,6 +31,7 @@
 @import 'components/productlisting';
 @import 'components/blog-promo';
 @import 'components/modals';
+@import 'components/video-fullwidth';
 
 @import 'pages/home';
 @import 'pages/blog-listing';
