site header nav dropdowns

--- a/src/scss/global/_elements.scss
+++ b/src/scss/global/_elements.scss
@@ -59,7 +59,7 @@
   // top: -1.15em;
   // left: 50%;
   top: 33%;
-  right: 2em;
+  left: 3em;
   line-height: 0;
   font-size: 75%;
   color: $true-white;
