--- a/src/scss/components/_site-header.scss
+++ b/src/scss/components/_site-header.scss
@@ -2,8 +2,38 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 99;
+  z-index: 101;
   background: $true-white;
+
+  .k-has-dropdown {
+    position: relative;
+
+    & > a {
+      position: relative;
+
+      span {
+        font-size: 50%;
+        position: absolute;
+        top: 50%;
+        right: -2em;
+        transform: translateY(-50%);
+        color: $highlight;
+      }
+    }
+  }
+
+  .k-dropdown {
+    height: 0;
+    overflow: hidden;
+    transition: height 0.2s $ease-out-circ;
+
+    li {
+      font-size: 80%;
+      margin-right: 0;
+      white-space: nowrap;
+      display: block;
+    }
+  }
 
   &--traveling {
     box-shadow: 0 0 3px -2px $bg-dark;
@@ -74,7 +104,6 @@
   }
 
   &--nav {
-    text-align: right;
     position: absolute;
     width: 100%;
     transition: transform 1s $ease-out-circ;
@@ -83,7 +112,7 @@
     background: $true-white;
 
     &__content {
-      padding: 2em 5% 2em 0;
+      padding: 2em 5% 2em 5%;
     }
 
     ul {
@@ -129,6 +158,30 @@
 
 @media (min-width: $bp-md) {
   .k-header {
+    .k-has-dropdown {
+      & > a span {
+        display: none;
+      }
+    }
+
+    .k-dropdown {
+      position: absolute;
+      width: auto;
+      top: 7.5em;
+      z-index: 102;
+
+      li {
+        font-size: 100%;
+        margin-bottom: 1.25em;
+        line-height: 1;
+      }
+
+      a {
+        color: $true-white;
+        text-transform: uppercase;
+      }
+    }
+
     &--top {
       .k-inner {
         display: flex;
