--- a/src/scss/global/_typography.scss
+++ b/src/scss/global/_typography.scss
@@ -115,6 +115,7 @@ body {
 }
 
 body {
+  position: relative;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: Arial, Helvetica, sans-serif;
