--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -32,6 +32,7 @@
 @import 'components/blog-promo';
 @import 'components/modals';
 @import 'components/video-fullwidth';
+@import 'components/cart-sidebar';
 
 @import 'pages/home';
 @import 'pages/blog-listing';
