--- a/src/scss/components/_cart-sidebar.scss
+++ b/src/scss/components/_cart-sidebar.scss
@@ -6,6 +6,7 @@
   z-index: 101;
   transform: translateX(100%);
   transition: transform 0.4s $ease-out-circ;
+  border-left: 1px solid #ddd;
 
   &--open {
     transform: translateX(0);
@@ -35,14 +36,23 @@
     }
   }
 
-  &__close {
+  &__close,
+  &__title {
+    margin: 0;
     position: absolute;
-    right: 1em;
     top: 1em;
 
     * {
       margin: 0;
     }
+  }
+
+  &__title {
+    left: 1em;
+  }
+
+  &__close {
+    right: 1em;
   }
 
   #k-ajaxcart-cartitems {
@@ -81,6 +91,11 @@
 
     h3 {
       flex-basis: 80%;
+      text-align: right;
+
+      a {
+        color: $black;
+      }
     }
   }
 }
@@ -99,8 +114,50 @@
       right: 2em;
     }
 
+    &__close,
+    &__title {
+      top: 2em;
+    }
+
     &__close {
       right: 2em;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    &__title {
+      left: 2em;
+      color: $primary;
+    }
+
+    &__item {
+      padding: 2em 0;
+    }
+  }
+}
+
+@media (min-width: $bp-xl) {
+  .k-cart-sidebar {
+    width: 33%;
+
+    &__liner {
+      padding: 0 4em;
+    }
+
+    &__actions,
+    #k-ajaxcart-cartitems {
+      left: 3em;
+      right: 3em;
+    }
+
+    &__close {
+      right: 3em;
+    }
+
+    &__title {
+      left: 3em;
     }
   }
 }
