--- a/src/scss/components/_cart-sidebar.scss
+++ b/src/scss/components/_cart-sidebar.scss
@@ -4,7 +4,9 @@
   right: 0;
   width: 75%;
   z-index: 101;
-  transform: translateX(100%);
+  transform: translateX(
+    101%
+  ); // the extra 1% solves some translate inconsistencies on some browsers
   transition: transform 0.4s $ease-out-circ;
   border-left: 1px solid #ddd;
 
@@ -53,6 +55,12 @@
 
   &__close {
     right: 1em;
+    transition: color 0.4s $ease-out-circ, transform 0.2s $ease-out-circ;
+
+    &:hover {
+      color: red;
+      transform: scale(1.1);
+    }
   }
 
   #k-ajaxcart-cartitems {
@@ -95,6 +103,14 @@
 
       a {
         color: $black;
+      }
+    }
+
+    p {
+      flex-basis: 50%;
+
+      &:last-child {
+        text-align: right;
       }
     }
   }
@@ -150,6 +166,17 @@
     #k-ajaxcart-cartitems {
       left: 3em;
       right: 3em;
+    }
+
+    &__item {
+      img {
+        flex-basis: 25%;
+        max-width: 25%;
+      }
+
+      h3 {
+        flex-basis: 50%;
+      }
     }
 
     &__close {
