--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,6 +33,7 @@
 @import 'components/modals';
 @import 'components/video-fullwidth';
 @import 'components/cart-sidebar';
+@import 'components/koi-process';
 
 @import 'pages/home';
 @import 'pages/blog-listing';
