--- a/src/scss/global/_elements.scss
+++ b/src/scss/global/_elements.scss
@@ -13,7 +13,7 @@
 
   &.active {
     z-index: 100;
-    opacity: 1;
+    opacity: 0.9;
     pointer-events: all;
   }
 }
@@ -21,7 +21,7 @@
 img[data-src] {
   opacity: 0;
   transform: scale(1.1);
-  transition: opacity 1s $ease-out-circ, transform 1s $ease-out-circ;
+  transition: opacity 0.3s $ease-in-circ, transform 1s $ease-out-circ;
 
   &.lazyload--complete {
     opacity: 1;
