--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,6 +34,7 @@
 @import 'components/video-fullwidth';
 @import 'components/cart-sidebar';
 @import 'components/koi-process';
+@import 'components/resources-callout';
 
 @import 'pages/home';
 @import 'pages/blog-listing';
