--- a/src/scss/components/_product-hero.scss
+++ b/src/scss/components/_product-hero.scss
@@ -23,6 +23,14 @@
     div {
       display: inline-block;
     }
+
+    a {
+      color: $primary;
+
+      &:hover {
+        color: $primary-dark !important;
+      }
+    }
   }
 
   &--details {
