--- a/src/scss/components/_product-latest-batch.scss
+++ b/src/scss/components/_product-latest-batch.scss
@@ -1,8 +1,12 @@
 .k-latestbatch {
   &--title {
     .k-headline {
-      margin: 0;
+      margin-top: 0;
     }
+  }
+
+  &--intro {
+    margin-bottom: 2em;
   }
 
   &--tabs {
@@ -151,6 +155,10 @@
 
 @media (min-width: $bp-xl) {
   .k-latestbatch {
+    &--intro {
+      margin-bottom: 4em;
+    }
+
     &--tabs {
       max-width: 50%;
       border-bottom: none;
@@ -202,6 +210,7 @@
   .k-latestbatch {
     &--intro {
       justify-content: flex-start;
+      margin-bottom: 6em;
     }
 
     &--title {
