--- a/src/scss/components/_product-latest-batch.scss
+++ b/src/scss/components/_product-latest-batch.scss
@@ -12,7 +12,7 @@
   &--tabs {
     display: flex;
     justify-content: flex-start;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     border-bottom: 1px solid #ccc;
 
     &:hover {
@@ -27,6 +27,7 @@
       padding: 0.5em 0;
 
       span {
+        display: block;
         font-size: 75%;
         color: $accent-text;
       }
@@ -39,7 +40,10 @@
         }
       }
 
-      &:first-child {
+      &:first-child,
+      &:nth-child(5),
+      &:nth-child(9),
+      &:nth-child(13) {
         border-left: 1px solid #ccc;
       }
     }
@@ -160,7 +164,6 @@
     }
 
     &--tabs {
-      max-width: 50%;
       border-bottom: none;
     }
 
