--- a/src/scss/components/_card-product.scss
+++ b/src/scss/components/_card-product.scss
@@ -15,6 +15,9 @@
     h3 {
       margin: 0;
       font-size: 120%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     p {
