--- a/src/scss/components/_product-reviews.scss
+++ b/src/scss/components/_product-reviews.scss
@@ -4,6 +4,16 @@
       margin: 0;
     }
   }
+
+  &--main {
+    a {
+      color: $primary;
+
+      &:hover {
+        color: $primary-dark;
+      }
+    }
+  }
 }
 
 .k-review {
