--- a/src/scss/pages/_my-account.scss
+++ b/src/scss/pages/_my-account.scss
@@ -37,6 +37,10 @@
       height: auto;
       transform: translateY(0);
     }
+
+    .woocommerce-form-row {
+      margin-bottom: 2em;
+    }
   }
 
   form {
