restyle checkout page

--- a/src/scss/components/_product-hero.scss
+++ b/src/scss/components/_product-hero.scss
@@ -171,6 +171,10 @@
     display: block;
     margin-bottom: 0.5em;
 
+    label {
+      margin-left: 0 !important;
+    }
+
     &.k-out-of-stock,
     &.has-quantity {
       margin-top: 1.5em;
