visual fixes and alert handling in cart/checkout

--- a/src/scss/global/_forms.scss
+++ b/src/scss/global/_forms.scss
@@ -58,6 +58,14 @@ form {
     }
   }
 
+  abbr[title] {
+    text-decoration: none;
+  }
+
+  span.required {
+    color: red;
+  }
+
   input[type='checkbox'],
   input[type='radio'] {
     position: absolute;
