--- a/src/scss/components/_cart.scss
+++ b/src/scss/components/_cart.scss
@@ -1,7 +1,23 @@
 .k-cart {
   background: $bg-gray;
 
+  &__notices {
+    text-align: center;
+
+    .woocommerce-notices-wrapper,
+    ul {
+      padding-top: 3em;
+    }
+
+    ul {
+      list-style-type: none;
+      margin: 0;
+    }
+  }
+
   &--meta {
+    padding-bottom: 0 !important;
+
     input {
       border: 1px solid #ddd;
       padding: 1em;
@@ -167,6 +183,31 @@
       margin-bottom: 1em;
     }
 
+    .k-coupon {
+      display: flex;
+      justify-content: space-between;
+      flex-flow: row nowrap;
+      padding-bottom: 1em;
+      border-bottom: 1px solid #dedede;
+
+      &__title,
+      &__discount {
+        flex-basis: 48.5%;
+      }
+
+      &__discount {
+        text-align: right;
+
+        a {
+          color: $primary;
+
+          &:hover {
+            color: red !important;
+          }
+        }
+      }
+    }
+
     .k-button {
       width: 100%;
 
@@ -195,6 +236,28 @@
       }
     }
   }
+
+  &__subtotal {
+    padding-top: 1em;
+    text-align: center;
+    margin-bottom: 1em;
+  }
+
+  &__continue {
+    margin-bottom: 1em;
+  }
+
+  &__meta {
+    p {
+      font-size: 80%;
+      line-height: 1.3;
+      margin-bottom: 1em;
+
+      &:first-child {
+        text-align: center;
+      }
+    }
+  }
 }
 
 @media (min-width: $bp-md) {
@@ -212,6 +275,14 @@
   .k-cart {
     & > .k-inner {
       @include clearfix();
+    }
+
+    &__headline {
+      padding-bottom: 4em;
+
+      h1 {
+        margin-top: 0;
+      }
     }
 
     &--main,
@@ -233,7 +304,6 @@
       display: flex;
       justify-content: space-between;
       flex-flow: row nowrap;
-      padding-left: 10%;
       border-bottom: 1px solid #ddd;
 
       .k-cart--titleitem {
