--- a/src/scss/components/_card-product.scss
+++ b/src/scss/components/_card-product.scss
@@ -4,7 +4,7 @@
     margin: auto;
 
     &--liner {
-      padding-bottom: 65.2%;
+      padding-bottom: 100%;
     }
   }
 
@@ -12,6 +12,10 @@
     .k-figure {
       width: 100%;
       border-radius: 0.33em;
+
+      &--liner {
+        padding-bottom: 65.2%;
+      }
     }
   }
 
