veteran program && other fixes

--- a/src/scss/components/_cart-sidebar.scss
+++ b/src/scss/components/_cart-sidebar.scss
@@ -71,6 +71,11 @@
     bottom: 6em;
     overflow: scroll;
     padding: 2em 0;
+
+    &::-webkit-scrollbar {
+      width: 0px;
+      background: transparent;
+    }
   }
 
   &__item {
