--- a/src/scss/components/_product-latest-batch.scss
+++ b/src/scss/components/_product-latest-batch.scss
@@ -25,6 +25,7 @@
       border-top: 1px solid #ccc;
       border-right: 1px solid #ccc;
       padding: 0.5em 0;
+      transition: background-color 0.4s $ease-out-circ;
 
       span {
         display: block;
