process-preview visual bug

--- a/src/scss/components/_process-preview.scss
+++ b/src/scss/components/_process-preview.scss
@@ -50,6 +50,8 @@
   &--video {
     order: 2;
     position: relative;
+    border-radius: 0.667em;
+    overflow: hidden;
 
     .k-figure {
       z-index: 2;
